--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <button class="text-lg md:text-xl font-normal p-3 md:p-2 text-white bg-black w-32 md:w-44 md:h-[60px] cursor-pointer">Sign Up</button>
         </div>
     </header>    
-    <main class="container m-auto relative p-5">
+    <main class="container m-auto relative py-5">
         <!-- HERO -->
        <section class="flex flex-wrap md:flex-nowrap justify-between md:h-[35rem] lg:h-[39rem]">
             <div class="w:full md:w-3/4 text-center md:text-left">
@@ -64,58 +64,69 @@
             </div> 
         </section>
         <!-- SERVICES -->
-        <section>
-            <h3>Our Services</h3>
-            <div>
-                <div>
-                    <img src="./images/Lighting design icon.svg" alt="Lighting Design Icon">
-                    <h4>Lighting Design</h4>
-                    <p>Achieve the perfect balance of ambient, task, and accent lighting for a functional atmosphere</p>
+        <section class="mt-16 md:mt-48">
+            <div class="flex items-center gap-8">
+                <div class="hidden md:block bg-lightBlack w-24 h-1"></div>
+                <h3 class="text-3xl text-center md:text-left w-full md:text-6xl font-semibold">Our Services</h3>
+            </div>
+            <div class="flex justify-center md:justify-between flex-wrap md:flex-nowrap mt-10 md:mt-20">
+                <div class="flex flex-wrap md:flex-nowrap justify-center md:justify-between gap-5 w-[450px]">
+                    <img class="w-[72px] h-[70px] align-self-start" src="./images/Lighting design icon.svg" alt="Lighting Design Icon">
+                    <div>
+                        <h4 class="font-semibold text-lightBlack text-xl text-center md:text-left md:text-3xl mb-7">Lighting Design</h4>
+                        <p class="font-bold text-base md:text-xl text-center md:text-left text-mediumGrey leading-8 mb-7 md:mb-0">Achieve the perfect balance of ambient, task, and accent lighting for a functional atmosphere</p>
+                    </div>
                 </div>
-                <div>
-                    <img src="./images/Interior design icon.svg" alt="Interior design Icon">
-                    <h4>Interior Design</h4>
-                    <p>From concept to completion, we oversee every detail to bring your vision to life efficiently</p>
+                <div class="flex flex-wrap md:flex-nowrap justify-center md:justify-between gap-5 w-[450px]">
+                    <img class="w-[72px] h-[70px] align-self-start" src="./images/Interior design icon.svg" alt="Interior design Icon">
+                    <div>
+                        <h4 class="font-semibold text-lightBlack text-xl text-center md:text-left md:text-3xl mb-7">Interior Design</h4>
+                        <p class="font-bold text-base md:text-xl text-center md:text-left text-mediumGrey leading-8 mb-7 md:mb-0">From concept to completion, we oversee every detail to bring your vision to life efficiently</p>
+                    </div>
                 </div>
-                <div>
-                    <img src="./images/Outdoor design icon.svg" alt="Outdoor Design Icon">
-                    <h4>Outdoor Design</h4>
-                    <p>Celebrate the changing seasons with our seasonal outdoor decor services</p>
+                <div class="flex flex-wrap md:flex-nowrap justify-center md:justify-between gap-5 w-[450px]">
+                    <img class="w-[72px] h-[70px] align-self-start" src="./images/Outdoor design icon.svg" alt="Outdoor Design Icon">
+                    <div>
+                        <h4 class="font-semibold text-lightBlack text-xl text-center md:text-left md:text-3xl mb-7">Outdoor Design</h4>
+                        <p class="font-bold text-base md:text-xl text-center md:text-left text-mediumGrey leading-8 mb-7 md:mb-0">Celebrate the changing seasons with our seasonal outdoor decor services</p>
+                    </div>
                 </div>
             </div>
         </section>
         <!-- DESIGN YOUR DREAM -->
-        <section>
-            <div>
+        <section class="mt-16 md:mt-48 flex flex-wrap md:flex-nowrap justify-center md:justify-between md:gap-16 text-lightBlack">
+            <div class="w-3/4 md:w-6/12">
                 <img src="./images/Mask group.svg" alt="Home decor">
             </div>
-            <div>
+            <div class="w-3/4 mt-8 md:mt-0 font-semibold md:w-6/12">
                 <div>
-                    <h3>Designing Your Dream With Brilliance</h3>
-                    <p>Elevate your spaces with bespoke interior designs that reflect your unique style and aspirations, crafted with precision and brilliance for an unforgettable living experience</p>
+                    <h3 class="text-2xl md:text-6xl mb-10">Designing Your Dream With Brilliance</h3>
+                    <p class="text-mediumGrey font-medium text-lg md:text-2xl md:mb-14">Elevate your spaces with bespoke interior designs that reflect your unique style and aspirations, crafted with precision and brilliance for an unforgettable living experience</p>
                 </div>
                 <div>
-                    <div>
-                        <h5>Living Room Interior Design</h5>
-                        <i class="fa-solid fa-plus"></i>
+                    <div class="flex justify-between mb-6 border-b pb-4 border-lightGrey">
+                        <h5 class="text-lg md:text-2xl">Living Room Interior Design</h5>
+                        <i class="fa-solid fa-plus text-lightBlack text-xl"></i>
                     </div>
-                    <div>
-                        <h5>Commercial Office Room Interior Design</h5>
-                        <i class="fa-solid fa-plus"></i>
+                    <div class="flex justify-between mb-6 border-b pb-4 border-lightGrey">
+                        <h5 class="text-lg md:text-2xl">Commercial Office Room Interior Design</h5>
+                        <i class="fa-solid fa-plus text-lightBlack text-xl"></i>
                     </div>
                 </div>
-                <button>Learn More</button>
+                <button class="text-lg md:text-xl font-normal p-3 md:p-2 text-white bg-black w-32 md:w-44 md:h-[60px] cursor-pointer">Learn More</button>
             </div>
         </section>
         <!-- DESIGN IN 3 STEPS-->
-         <section>
-            <div>
-                <h3>Designing Your Dream in Three Simple Steps</h3>
+         <section class="mt-16 md:mt-48 flex flex-wrap justify-center md:justify-between md:flex-nowrap gap-10">
+            <div class="w-3/4 md:w-6/12 text-lightBlack">
+                <h3 class="text-2xl md:text-[58px] leading-[70px] font-semibold">Designing Your Dream in Three Simple Steps</h3>
                 <div>
-                    <div>
-                        <img src="./images/Group 25.svg" alt="Icon">
-                        <h5>Start Project</h5>
-                        <p>Embark on your design adventure by initiating your project. Share your vision and set the stage for a bespoke design experience</p>
+                    <div class="flex justify-between gap-10 mt-16">
+                        <img class="align-self-start w-7 h-7" src="./images/Group 25.svg" alt="Icon">
+                        <div>
+                            <h5 class="text-lg md:text-3xl mb-5">Start Project</h5>
+                            <p class="text-mediumGrey font-medium text-base md:text-2xl">Embark on your design adventure by initiating your project. Share your vision and set the stage for a bespoke design experience</p>
+                        </div>
                     </div>
                     <div>
                         <img src="./images/Group 26.svg" alt="Icon">
@@ -129,7 +140,7 @@
                     </div>
                 </div>
             </div>
-            <div>
+            <div class="w-3/4 md:w-6/12">
                 <img src="./images/Mask group (1).svg" alt="Living Room Decor">
             </div>
          </section>
