--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body class="font-inter">
     </div>
     <!-- HEADER -->
-    <header class="container py-8 p-5 m-auto flex justify-between items-center font-semibold">
+    <header class="container w-10/12 py-10  m-auto flex justify-between items-center font-semibold">
         <div class="w-36 md:w-44 cursor-pointer">
             <img class="w-full" src="./images/Logo.svg" alt="">
         </div>
@@ -23,11 +23,11 @@
                 <li class="text-lg lg:text-2xl text-mediumGrey cursor-pointer"><a href="#">Support</a></li>
             </ul>
         </nav>
-        <div class="">
+        <div>
             <button class="text-lg md:text-xl font-normal p-3 md:p-2 text-white bg-black w-32 md:w-44 md:h-[60px] cursor-pointer">Sign Up</button>
         </div>
     </header>    
-    <main class="container m-auto relative py-5">
+    <main class="container w-10/12 m-auto relative py-5">
         <!-- HERO -->
        <section class="flex flex-wrap md:flex-nowrap justify-between md:h-[35rem] lg:h-[39rem]">
             <div class="w:full md:w-3/4 text-center md:text-left">
@@ -117,26 +117,30 @@
             </div>
         </section>
         <!-- DESIGN IN 3 STEPS-->
-         <section class="mt-16 md:mt-48 flex flex-wrap justify-center md:justify-between md:flex-nowrap gap-10">
+         <section class="mt-16 md:mt-48 flex flex-wrap justify-center md:justify-between md:flex-nowrap gap-6">
             <div class="w-3/4 md:w-6/12 text-lightBlack">
-                <h3 class="text-2xl md:text-[58px] leading-[70px] font-semibold">Designing Your Dream in Three Simple Steps</h3>
+                <h3 class="text-2xl md:text-[55px] leading-[70px] font-semibold">Designing Your Dream in Three Simple Steps</h3>
                 <div>
-                    <div class="flex justify-between gap-10 mt-16">
-                        <img class="align-self-start w-7 h-7" src="./images/Group 25.svg" alt="Icon">
+                    <div class="flex justify-between gap-7 mt-16">
+                        <img class="align-self-start w-16 h-16" src="./images/Group 25.svg" alt="Icon">
                         <div>
-                            <h5 class="text-lg md:text-3xl mb-5">Start Project</h5>
-                            <p class="text-mediumGrey font-medium text-base md:text-2xl">Embark on your design adventure by initiating your project. Share your vision and set the stage for a bespoke design experience</p>
+                            <h5 class="text-lg md:text-3xl font-bold mb-5">Start Project</h5>
+                            <p class="leading-[40px] text-mediumGrey font-medium text-base md:text-2xl">Embark on your design adventure by initiating your project. Share your vision and set the stage for a bespoke design experience</p>
                         </div>
                     </div>
-                    <div>
-                        <img src="./images/Group 26.svg" alt="Icon">
-                        <h5>Craft</h5>
-                        <p>Collaborate closely to achieve design excellence refining your vision and crafting brilliance into every aspect of your space</p>
+                    <div class="flex justify-between gap-7 mt-10">
+                        <img class="align-self-start w-16 h-16" src="./images/Group 26.svg" alt="Icon">
+                        <div>
+                            <h5 class="text-lg md:text-3xl font-bold mb-5">Craft</h5>
+                            <p class="leading-[40px] text-mediumGrey font-medium text-base md:text-2xl">Collaborate closely to achieve design excellence refining your vision and crafting brilliance into every aspect of your space</p>
+                        </div>
                     </div>
-                    <div>
-                        <img src="./images/Group 27.svg" alt="Icon">
-                        <h5>Execute</h5>
-                        <p>Witness your vision becoming a reality as we execute the design plan with precision. Celebrate the joy of your newly transformed space</p>
+                    <div class="flex justify-between gap-7 mt-10">
+                        <img class="align-self-start w-16 h-16" src="./images/Group 27.svg" alt="Icon">
+                        <div>
+                            <h5 class="text-lg md:text-3xl font-bold mb-5">Execute</h5>
+                            <p class="leading-[40px] text-mediumGrey font-medium text-base md:text-2xl">Witness your vision becoming a reality as we execute the design plan with precision. Celebrate the joy of your newly transformed space</p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -180,53 +184,53 @@
             </div>
          </section>
         <!-- SUBSCRIBE -->
-         <section>
-            <h3>Subscribe to Our Newsletter for Design Insights</h3>
-            <p>Be the first to discover trends, inspirations, and special offers as we bring the world of design directly to your inbox</p>
-            <div>
-                <i class="fa-regular fa-envelope"></i>
-                <input type="text" placeholder="Enter your email address">
-                <button>Subscribe</button>
+         <section class="mt-16 md:mt-48 text-center w-8/12 m-auto">
+            <h3 class="text-3xl md:text-[58px] font-bold md:leading-[70px]">Subscribe to Our Newsletter for Design Insights</h3>
+            <p class="text-mediumGrey font-medium text-base md:text-2xl my-12">Be the first to discover trends, inspirations, and special offers as we bring the world of design directly to your inbox</p>
+            <div class="relative">
+                <i class="fa-regular fa-envelope absolute left-9 -bottom-5 z-30 text-lightGrey2 text-lg md:text-2xl"></i>
+                <input class="absolute font-medium text-lg md:text-2xl px-20 -bottom-14 left-0 w-full h-[104px] rounded shadow-2xl -z-10" type="text" placeholder="Enter your email address">
+                <button class="absolute right-0 top-0 text-lg md:text-xl font-normal p-3 md:p-2 text-white bg-black w-32 md:w-44 md:h-[60px] cursor-pointer z-30">Subscribe</button>
             </div>
          </section>
     </main>
     <!-- FOOTER -->
-    <footer>
-        <div>
-            <div>
-                <img src="./images/Logo.svg" alt="">
+    <footer class="container w-10/12 m-auto relative py-20 px-16 flex flex-wrap justify-center md:justify-between bg-lightBlack text-white font-medium text-base md:text-[22px] -z-20">
+        <div class="w-full md:w-3/12 mb-10 md:mb-0">
+            <div class="mb-7">
+                <img src="./images/Logo 2.svg" alt="">
             </div>
-            <p>VivaDecor your premier destination for luxury and modern interior design</p>
-            <div>
+            <p class="mb-7 ">VivaDecor your premier destination for luxury and modern interior design</p>
+            <div class="flex gap-3">
                 <img src="./images/Facebook.svg" alt="Facebook icon">
                 <img src="./images/X.svg" alt="X icon">
                 <img src="./images/Instagram.svg" alt="Instagram icon">
                 <img src="./images/Linkdin.svg" alt="Linkedin icon">
             </div>
         </div>
-        <div>
-            <div>
-                <h6>Our Services</h6>
+        <div class="w-full md:w-8/12 flex flex-wrap md:flex-nowrap justify-center md:justify-between gap-10">
+            <div class="mb-10 md:mb-0 w-full">
+                <h6 class="font-semibold text-lg md:text-2xl mb-6">Our Services</h6>
                 <ul>
-                    <li>Interior design</li>
-                    <li>Outdoor design</li>
-                    <li>Lightning design</li>
-                    <li>Office design</li>
+                    <li class="mb-5">Interior design</li>
+                    <li class="mb-5">Outdoor design</li>
+                    <li class="mb-5">Lightning design</li>
+                    <li class="mb-5">Office design</li>
                 </ul>
             </div>
-            <div>
-                <h6>Our Services</h6>
+            <div class="mb-10 md:mb-0 w-full">
+                <h6 class="font-semibold text-lg md:text-2xl mb-6">Our Services</h6>
                 <ul>
-                    <li>Reviews</li>
-                    <li>Careers</li>
-                    <li>Pricing</li>
-                    <li>Press inquires</li>
+                    <li class="mb-5">Reviews</li>
+                    <li class="mb-5">Careers</li>
+                    <li class="mb-5">Pricing</li>
+                    <li class="mb-5">Press inquires</li>
                 </ul>
             </div>
-            <div>
-                <h6>Our Services</h6>
+            <div class="mb-10 md:mb-0 w-full">
+                <h6 class="font-semibold text-lg md:text-2xl mb-6">Our Services</h6>
                 <ul>
-                    <li>info@vivadecor.com</li>
+                    <li class="mb-5">info@vivadecor.com</li>
                     <li>Design Avenue Cityville,<br />
                         CA 90210 United States</li>
                 </ul>
