--- a/index.html
+++ b/index.html
@@ -149,19 +149,19 @@
             </div>
          </section>
         <!-- REVIEWS -->
-         <section>
-            <div>
+         <section class="mt-16 md:mt-48 flex flex-wrap md:flex-nowrap justify-center md:justify-between gap-10">
+            <div class="6/12">
                 <div>
-                    <img src="./images/Mask group (2).svg" alt="Home decor">
+                    <img src="./images/Image.svg" alt="Home decor">
                 </div>
-                <div>
-                    <i class="fa-solid fa-arrow-left-long"></i>
-                    <i class="fa-solid fa-arrow-right-long"></i>
+                <div class="flex">
+                    <i class="fa-solid fa-arrow-left-long w-10 h-10 md:w-[73px] md:h-[73px] bg-lightGrey3"></i>
+                    <i class="fa-solid fa-arrow-right-long w-10 h-10 md:w-[73px] md:h-[73px] bg-lightGrey3"></i>
                 </div>
             </div>
-            <div>
-                <h3>What Our Customers Say About Us</h3>
-                <div>
+            <div class="6/12">
+                <h3 class="text-lg md:text-[58px] leading-[70px] font-semibold">What Our Customers Say About Us</h3>
+                <div class="">
                     <div class="bg-black">
                         <img src="./images/“ (1).svg" alt="">
                         <p>Working with your design team was an absolute pleasure. The attention to detail and creativity exceeded my expectations.  Thank you for making my home beautiful!</p>
@@ -189,8 +189,8 @@
             <p class="text-mediumGrey font-medium text-base md:text-2xl my-12">Be the first to discover trends, inspirations, and special offers as we bring the world of design directly to your inbox</p>
             <div class="relative">
                 <i class="fa-regular fa-envelope absolute left-9 -bottom-5 z-30 text-lightGrey2 text-lg md:text-2xl"></i>
-                <input class="absolute font-medium text-lg md:text-2xl px-20 -bottom-14 left-0 w-full h-[104px] rounded shadow-2xl -z-10" type="text" placeholder="Enter your email address">
-                <button class="absolute right-0 top-0 text-lg md:text-xl font-normal p-3 md:p-2 text-white bg-black w-32 md:w-44 md:h-[60px] cursor-pointer z-30">Subscribe</button>
+                <input class="absolute font-medium text-base md:text-2xl px-20 -bottom-14 left-0 w-full h-20 rounded shadow-2xl -z-10" type="text" placeholder="Enter your email address">
+                <button class="absolute right-2 -top-3 text-lg md:text-xl font-normal p-3 md:p-2 text-white bg-black w-32 md:w-44 md:h-[60px] cursor-pointer z-30">Subscribe</button>
             </div>
          </section>
     </main>
