--- a/index.html
+++ b/index.html
@@ -149,42 +149,46 @@
             </div>
          </section>
         <!-- REVIEWS -->
-         <section class="mt-16 md:mt-48 flex flex-wrap md:flex-nowrap justify-center md:justify-between gap-10">
+         <section class="md:relative mt-16 md:mt-48 flex flex-wrap md:flex-nowrap justify-center md:justify-between gap-10">
             <div class="6/12">
                 <div>
                     <img src="./images/Image.svg" alt="Home decor">
                 </div>
-                <div class="flex">
-                    <i class="fa-solid fa-arrow-left-long w-10 h-10 md:w-[73px] md:h-[73px] bg-lightGrey3"></i>
-                    <i class="fa-solid fa-arrow-right-long w-10 h-10 md:w-[73px] md:h-[73px] bg-lightGrey3"></i>
+                <div class="flex mt-8 gap-5">
+                    <i class="fa-solid fa-arrow-left-long w-10 h-10 md:w-[50px] md:h-[50px] bg-lightGrey3 flex items-center justify-center"></i>
+                    <i class="fa-solid fa-arrow-left-long w-10 h-10 md:w-[50px] md:h-[50px] bg-lightGrey3 flex items-center justify-center"></i>
                 </div>
             </div>
             <div class="6/12">
-                <h3 class="text-lg md:text-[58px] leading-[70px] font-semibold">What Our Customers Say About Us</h3>
-                <div class="">
-                    <div class="bg-black">
+                <h3 class="md:ml-12 md:mb-16 text-lg md:text-[58px] leading-[70px] font-semibold">What Our Customers Say About Us</h3>
+                <div class="md:flex gap-10 md:absolute left-32 border-[30px] border-white">
+                    <div class="text-white font-medium bg-black w-full md:w-[550px] h-auto md:h-[600px] py-20 px-10 mb-10 md:mb-0">
                         <img src="./images/“ (1).svg" alt="">
-                        <p>Working with your design team was an absolute pleasure. The attention to detail and creativity exceeded my expectations.  Thank you for making my home beautiful!</p>
-                        <div>
-                            <img src="./images/User 1.svg" alt="">
-                            <h6>Sophie Carter</h6>
-                            <p>New York, USA</p>
+                        <p class="text-lg md:text2xl text-white leading-[40px] mt-16">Working with your design team was an absolute pleasure. The attention to detail and creativity exceeded my expectations.  Thank you for making my home beautiful!</p>
+                        <div class="mt-16 flex items-center gap-6"> 
+                            <img src="./images/Mask group (3).svg" alt="">
+                            <div>
+                                <h6 class="font-semibold mb-3">Sophie Carter</h6>
+                                <p class="text-mediumGrey2">New York, USA</p>
+                            </div>
                         </div>
                     </div>
-                    <div class="bg-black">
+                    <div class="text-white font-medium bg-black w-full md:w-[550px] h-auto md:h-[600px] py-20 px-10">
                         <img src="./images/“ (1).svg" alt="">
-                        <p>Exceptional service! From the initial consultation to the final reveal, your team demonstrated professionalism and a keen eye for design. Highly recommend!</p>
-                        <div>
-                            <img src="./images/User 1.svg" alt="">
-                            <h6>James Bennett</h6>
-                            <p>Toronto, Canada</p>
+                        <p class="text-lg md:text2xl text-white leading-[40px] mt-16">Exceptional service! From the initial consultation to the final reveal, your team demonstrated professionalism and a keen eye for design. Highly recommend!</p>
+                        <div class="mt-16 flex items-center gap-6">
+                            <img src="./images/Mask group 4.svg" alt="">
+                            <div>
+                                <h6 class="font-semibold mb-3">James Bennett</h6>
+                                <p class="text-mediumGrey2">Toronto, Canada</p>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
          </section>
         <!-- SUBSCRIBE -->
-         <section class="mt-16 md:mt-48 text-center w-8/12 m-auto">
+         <section class="mt-16 lg:mt-96 text-center w-8/12 m-auto">
             <h3 class="text-3xl md:text-[58px] font-bold md:leading-[70px]">Subscribe to Our Newsletter for Design Insights</h3>
             <p class="text-mediumGrey font-medium text-base md:text-2xl my-12">Be the first to discover trends, inspirations, and special offers as we bring the world of design directly to your inbox</p>
             <div class="relative">
