--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <div class="hidden md:block bg-lightBlack w-24 h-1"></div>
                 <h3 class="text-3xl text-center md:text-left w-full md:text-6xl font-semibold">Our Services</h3>
             </div>
-            <div class="flex justify-center md:justify-between flex-wrap md:flex-nowrap mt-10 md:mt-20">
+            <div class="flex justify-center lg:justify-between flex-wrap lg:flex-nowrap mt-10 lg:mt-20">
                 <div class="flex flex-wrap md:flex-nowrap justify-center md:justify-between gap-5 w-[450px]">
                     <img class="w-[72px] h-[70px] align-self-start" src="./images/Lighting design icon.svg" alt="Lighting Design Icon">
                     <div>
@@ -94,11 +94,11 @@
             </div>
         </section>
         <!-- DESIGN YOUR DREAM -->
-        <section class="mt-16 md:mt-48 flex flex-wrap md:flex-nowrap justify-center md:justify-between md:gap-16 text-lightBlack">
-            <div class="w-3/4 md:w-6/12">
+        <section class="mt-16 md:mt-48 flex flex-wrap lg:flex-nowrap justify-center lg:justify-between lg:gap-16 text-lightBlack">
+            <div class="w-full lg:w-6/12">
                 <img src="./images/Mask group.svg" alt="Home decor">
             </div>
-            <div class="w-3/4 mt-8 md:mt-0 font-semibold md:w-6/12">
+            <div class="w-full mt-10 lg:mt-0 font-semibold lg:w-6/12">
                 <div>
                     <h3 class="text-2xl md:text-6xl mb-10">Designing Your Dream With Brilliance</h3>
                     <p class="text-mediumGrey font-medium text-lg md:text-2xl md:mb-14">Elevate your spaces with bespoke interior designs that reflect your unique style and aspirations, crafted with precision and brilliance for an unforgettable living experience</p>
@@ -117,8 +117,8 @@
             </div>
         </section>
         <!-- DESIGN IN 3 STEPS-->
-         <section class="mt-16 md:mt-48 flex flex-wrap justify-center md:justify-between md:flex-nowrap gap-6">
-            <div class="w-3/4 md:w-6/12 text-lightBlack">
+         <section class="mt-16 md:mt-48 flex flex-wrap justify-center lg:justify-between lg:flex-nowrap gap-6">
+            <div class="w-full lg:w-6/12 text-lightBlack">
                 <h3 class="text-2xl md:text-[55px] leading-[70px] font-semibold">Designing Your Dream in Three Simple Steps</h3>
                 <div>
                     <div class="flex justify-between gap-7 mt-16">
@@ -144,25 +144,25 @@
                     </div>
                 </div>
             </div>
-            <div class="w-3/4 md:w-6/12">
+            <div class="w-full lg:w-6/12">
                 <img src="./images/Mask group (1).svg" alt="Living Room Decor">
             </div>
          </section>
         <!-- REVIEWS -->
-         <section class="md:relative mt-16 md:mt-48 flex flex-wrap md:flex-nowrap justify-center md:justify-between gap-10">
+         <section class="md:relative mt-16 md:mt-48 flex flex-wrap lg:flex-nowrap justify-center md:justify-between gap-10">
             <div class="6/12">
                 <div>
                     <img src="./images/Image.svg" alt="Home decor">
                 </div>
                 <div class="flex mt-8 gap-5">
-                    <i class="fa-solid fa-arrow-left-long w-10 h-10 md:w-[50px] md:h-[50px] bg-lightGrey3 flex items-center justify-center"></i>
-                    <i class="fa-solid fa-arrow-left-long w-10 h-10 md:w-[50px] md:h-[50px] bg-lightGrey3 flex items-center justify-center"></i>
+                    <i class="fa-solid fa-arrow-left-long w-10 h-10 md:w-[50px] md:h-[50px] bg-lightGrey3 flex items-center justify-center cursor-pointer"></i>
+                    <i class="fa-solid fa-arrow-left-long w-10 h-10 md:w-[50px] md:h-[50px] bg-lightGrey3 flex items-center justify-center cursor-pointer"></i>
                 </div>
             </div>
             <div class="6/12">
                 <h3 class="md:ml-12 md:mb-16 text-lg md:text-[58px] leading-[70px] font-semibold">What Our Customers Say About Us</h3>
-                <div class="md:flex gap-10 md:absolute left-32 border-[30px] border-white">
-                    <div class="text-white font-medium bg-black w-full md:w-[550px] h-auto md:h-[600px] py-20 px-10 mb-10 md:mb-0">
+                <div class="md:flex gap-10 lg:absolute left-32 border-[30px] border-white">
+                    <div class="text-white font-medium bg-black w-full md:w-1/2 lg:w-[350px] xl:w-[450px] h-auto lg:h-[600px] py-20 px-10 mb-10 md:mb-0">
                         <img src="./images/“ (1).svg" alt="">
                         <p class="text-lg md:text2xl text-white leading-[40px] mt-16">Working with your design team was an absolute pleasure. The attention to detail and creativity exceeded my expectations.  Thank you for making my home beautiful!</p>
                         <div class="mt-16 flex items-center gap-6"> 
@@ -173,7 +173,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="text-white font-medium bg-black w-full md:w-[550px] h-auto md:h-[600px] py-20 px-10">
+                    <div class="text-white font-medium bg-black w-full md:w-1/2 lg:w-[350px] xl:w-[450px] h-auto lg:h-[600px] py-20 px-10">
                         <img src="./images/“ (1).svg" alt="">
                         <p class="text-lg md:text2xl text-white leading-[40px] mt-16">Exceptional service! From the initial consultation to the final reveal, your team demonstrated professionalism and a keen eye for design. Highly recommend!</p>
                         <div class="mt-16 flex items-center gap-6">
@@ -188,7 +188,7 @@
             </div>
          </section>
         <!-- SUBSCRIBE -->
-         <section class="mt-16 lg:mt-96 text-center w-8/12 m-auto">
+         <section class="mt-16 lg:mt-[500px] text-center w-8/12 m-auto">
             <h3 class="text-3xl md:text-[58px] font-bold md:leading-[70px]">Subscribe to Our Newsletter for Design Insights</h3>
             <p class="text-mediumGrey font-medium text-base md:text-2xl my-12">Be the first to discover trends, inspirations, and special offers as we bring the world of design directly to your inbox</p>
             <div class="relative">
