--- a/index.html
+++ b/index.html
@@ -191,10 +191,10 @@
          <section class="mt-16 lg:mt-[500px] text-center w-8/12 m-auto">
             <h3 class="text-3xl md:text-[58px] font-bold md:leading-[70px]">Subscribe to Our Newsletter for Design Insights</h3>
             <p class="text-mediumGrey font-medium text-base md:text-2xl my-12">Be the first to discover trends, inspirations, and special offers as we bring the world of design directly to your inbox</p>
-            <div class="relative">
-                <i class="fa-regular fa-envelope absolute left-9 -bottom-5 z-30 text-lightGrey2 text-lg md:text-2xl"></i>
-                <input class="absolute font-medium text-base md:text-2xl px-20 -bottom-14 left-0 w-full h-20 rounded shadow-2xl -z-10" type="text" placeholder="Enter your email address">
-                <button class="absolute right-2 -top-3 text-lg md:text-xl font-normal p-3 md:p-2 text-white bg-black w-32 md:w-44 md:h-[60px] cursor-pointer z-30">Subscribe</button>
+            <div class="relative flex flex-col justify-center items-center md:block gap-5">
+                <i class="fa-regular fa-envelope absolute left-9 top-7 md:top-1 lg:-bottom-5 z-30 text-lightGrey2 text-base lg:text-2xl"></i>
+                <input class="md:absolute font-medium text-sm lg:text-2xl px-20 -bottom-14 left-0 w-full h-20 rounded shadow-2xl -z-10" type="text" placeholder="Enter your email address">
+                <button class="md:absolute right-2 -top-3 text-lg md:text-xl font-normal p-3 md:p-2 text-white bg-black w-32 md:w-44 md:h-[60px] cursor-pointer z-30">Subscribe</button>
             </div>
          </section>
     </main>
